# test-poetry-pre-commi

./: .gitignore  .pre-commit-config.yaml  _.pre-commit-config.yaml  pyproject.toml  requirements.txt
test_poetry_pre_commit/: main.py
tests/: test_test_poetry_pre_commit.py
